2004-03-12  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac, config/x_ac_reentrant.m4, src/munged/Makefile.am:
	  Moved _REENTRANT to top-level "config.h".

2004-03-11  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_check_cond_lib.m4, config/x_ac_check_peercred.m4,
	  config/x_ac_debug.m4, config/x_ac_gpl_licensed.m4,
	  config/x_ac_humor.m4, config/x_ac_meta.m4: Reformatted.

	* src/munged/Makefile.am: Added _REENTRANT def to munged CFLAGS.

	* configure.ac, config/x_ac_ltlibobjs.m4:
	  Removed munging of LIBOBJS & LTLIBOBJS for automake & libtool.
	  Refer to autoconf docs 15.6.4: AC_LIBOBJ vs. LIBOBJS.

	* configure.ac, config/x_ac_check_cond_lib.m4, src/libcommon/common.h,
	  src/libcommon/munge_defs.h, src/libcommon/munge_msg.c,
	  src/libmunge/decode.c, src/libmunge/munge.h, src/libmunge/strings.c,
	  src/munged/Makefile.am, src/munged/conf.c, src/munged/cred.c,
	  src/munged/cred.h, src/munged/dec_v1.c, src/munged/enc_v1.c,
	  src/munged/zip.c, src/munged/zip.h: Added support for compression.

	* src/munged/replay.c(replay_insert): Changed return codes.

	* config/x_ac_meta.m4: Added test for META file existence.

2004-03-05  Chris Dunlap  <cdunlap@llnl.gov>

	* config/ac_check_peercred.m4, config/ac_debug.m4,
	  config/ac_gpl_licensed.m4, config/ac_humor.m4,
	  config/ac_ltlibobjs.m4, config/ac_meta.m4:
	  Renamed to config/x_ac_*.m4 to prevent future potential
	  conflicts in the autoconf variable namespace.

	* config/ac_check_peercred.m4, config/ac_humor.m4:
	  Added autoconf caching support.

2004-03-04  Chris Dunlap  <cdunlap@llnl.gov>

	* README, munge.spec: Updated description.

2004-03-01  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.c, src/munge/unmunge.c:
	  Ignore EPIPE when closing output streams.

2004-02-13  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/str.c, src/libcommon/str.h:
	  Removed strdump().  Added strhex().

2004-02-05  Chris Dunlap  <cdunlap@llnl.gov>
