@@ -1,5 +1,5 @@
 /*****************************************************************************
- *  $Id: enc_v1.c,v 1.11 2004/03/11 21:04:40 dun Exp $
+ *  $Id: enc_v1.c,v 1.12 2004/03/12 22:45:02 dun Exp $
  *****************************************************************************
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
@@ -470,6 +470,7 @@ enc_v1_precompress (munge_cred_t c)
     }
     /*  Allocate memory for compressed "inner" data.
      */
+    buf = NULL;
     buf_len = zip_compress_length (m1->zip, c->inner, c->inner_len);
     if (buf_len < 0) {
         goto err;
